--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -186,6 +186,7 @@ VALUES
   "position",
   "processed",
   "remaining",
+  "throughput",
   "is_completed",
   "is_split_requested"
 )
@@ -202,6 +203,7 @@ VALUES
   @position,
   @processed,
   @remaining,
+  @throughput,
   @is_completed,
   @is_split_requested
 );</value>
@@ -297,6 +299,7 @@ SET
   "position" = @position,
   "processed" = ("processed" + @progress),
   "remaining" = ("remaining" - @progress),
+  "throughput" = @throughput,
   "is_completed" = @completed
 WHERE
   ("id" = @id) AND
@@ -313,6 +316,7 @@ RETURNING
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested";</value>
   </data>
@@ -383,6 +387,7 @@ GROUP BY
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested"
 FROM
@@ -429,6 +434,7 @@ RETURNING
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested";</value>
   </data>
@@ -470,6 +476,7 @@ SET
   "position" = @position,
   "processed" = @processed,
   "remaining" = @remaining,
+  "throughput" = @throughput,
   "is_split_requested" = @is_split_requested
 WHERE
   ("id" = @partition_id) AND
