Includes the "throughput" in the generated job status report.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -356,7 +356,8 @@ WHERE
   SUM(t2."processed") AS "keys_completed",
   COALESCE(MAX(t2."updated"), t1."updated") AS "last_activity",
   COALESCE((SELECT SUM("acquired") - COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = t1."id") AND ("acquired" &gt; 0)), 0) AS "ownership_changes",
-  COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending"
+  COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending",
+  COALESCE(SUM("throughput") FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."updated" >= ((NOW() AT TIME ZONE 'UTC') - ((t1."timeout" + t1."clock_drift") * 0.0001 * '1 MICROSECOND'::INTERVAL)))), 0.0) AS "throughput"
 FROM
   "dipren"."jobs" t1
   LEFT JOIN "dipren"."partitions" t2 ON (t1."id" = t2."job_id")
