Includes the current observed throughput in the job status report (#57)

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -186,6 +186,7 @@ VALUES
   "position",
   "processed",
   "remaining",
+  "throughput",
   "is_completed",
   "is_split_requested"
 )
@@ -202,6 +203,7 @@ VALUES
   @position,
   @processed,
   @remaining,
+  @throughput,
   @is_completed,
   @is_split_requested
 );</value>
@@ -297,6 +299,7 @@ SET
   "position" = @position,
   "processed" = ("processed" + @progress),
   "remaining" = ("remaining" - @progress),
+  "throughput" = @throughput,
   "is_completed" = @completed
 WHERE
   ("id" = @id) AND
@@ -313,6 +316,7 @@ RETURNING
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested";</value>
   </data>
@@ -352,7 +356,8 @@ WHERE
   SUM(t2."processed") AS "keys_completed",
   COALESCE(MAX(t2."updated"), t1."updated") AS "last_activity",
   COALESCE((SELECT SUM("acquired") - COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = t1."id") AND ("acquired" &gt; 0)), 0) AS "ownership_changes",
-  COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending"
+  COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending",
+  COALESCE(SUM("throughput") FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."updated" >= (@timestamp - ('1 MICROSECOND'::INTERVAL * ((t1."timeout" + t1."clock_drift")::DOUBLE PRECISION / 10))))), 0.0) AS "current_throughput"
 FROM
   "dipren"."jobs" t1
   LEFT JOIN "dipren"."partitions" t2 ON (t1."id" = t2."job_id")
@@ -383,6 +388,7 @@ GROUP BY
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested"
 FROM
@@ -429,6 +435,7 @@ RETURNING
   "position" AS "position",
   "processed" AS "processed",
   "remaining" AS "remaining",
+  "throughput" AS "throughput",
   "is_completed" AS "is_completed",
   "is_split_requested" AS "is_split_requested";</value>
   </data>
@@ -470,6 +477,7 @@ SET
   "position" = @position,
   "processed" = @processed,
   "remaining" = @remaining,
+  "throughput" = @throughput,
   "is_split_requested" = @is_split_requested
 WHERE
   ("id" = @partition_id) AND
